--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Adome
+description:      "记录心情的点滴"
 disqus_shortname: 
 reading_time:     true
 words_per_minute: 200
@@ -43,10 +43,9 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Asia/Shanghai
 future:      true
-pygments:    true
-#highlighter: pygments
+highlighter: pygments
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
