--- a/_config_d.yml
+++ b/_config_d.yml
@@ -4,7 +4,7 @@ disqus_shortname:
 reading_time:     true
 words_per_minute: 200
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://aidistan.github.io/blog
+url:              http://0.0.0.0:4000
 
 # Owner/author information
 owner:
