--- a/rakefile
+++ b/rakefile
@@ -19,91 +19,79 @@ task :serve_with_drafts do
   system("jekyll serve --config _config_d.yml -D")
 end
 
-# require "rubygems"
-# require "bundler/setup"
-# require "stringex"
+require "stringex"
 
-# ## -- Config -- ##
+# create new post
+desc "Create a new post in _posts"
+task :new_post, :title do |t, args|
+  if args.title
+    title = args.title
+  else
+    title = get_stdin("Enter a title for your post: ")
+  end
+  filename = "_posts/#{Time.now.strftime('%Y-%m-%d')}-#{title.to_url}.md"
+  if File.exist?(filename)
+    abort("rake aborted!") unless ask("#{filename} already exists. Do you want to overwrite?", ['y', 'N']) == 'y'
+  end
+  puts "Creating new post: #{filename}"
+  rtn = <<-END_OF_DOC
+---
+layout: post
+title: \"#{title.gsub(/&/,'&amp;')}\"
+modified: #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
+tags: []
+image:
+  feature: 
+  credit: 
+  creditlink: 
+comments: 
+share: 
+---
+  END_OF_DOC
+  File.open(filename, 'w').puts rtn
+end
 
-# posts_dir       = "_posts"    # directory for blog files
-# new_post_ext    = "md"  # default new post file extension when using the new_post task
-# new_page_ext    = "md"  # default new page file extension when using the new_page task
+# usage rake new_page
+desc "Create a new page"
+task :new_page, :title do |t, args|
+  if args.title
+    title = args.title
+  else
+    title = get_stdin("Enter a title for your page: ")
+  end
+  filename = "#{title.to_url}.md"
+  if File.exist?(filename)
+    abort("rake aborted!") unless ask("#{filename} already exists. Do you want to overwrite?", ['y', 'N']) == 'y'
+  end
+  puts "Creating new page: #{filename}"
+  rtn = <<-END_OF_DOC
+---
+layout: page
+permalink: /#{title.to_url}/
+title: \"#{title}\"
+modified: #{Time.now.strftime('%Y-%m-%d %H:%M')}
+tags: []
+image:
+  feature: 
+  credit: 
+  creditlink: 
+comments: 
+share: 
+---
+  END_OF_DOC
+  File.open(filename, 'w').puts rtn
+end
 
+def get_stdin(message)
+  print message
+  STDIN.gets.chomp
+end
 
-# #############################
-# # Create a new Post or Page #
-# #############################
-
-# # usage rake new_post
-# desc "Create a new post in #{posts_dir}"
-# task :new_post, :title do |t, args|
-#   if args.title
-#     title = args.title
-#   else
-#     title = get_stdin("Enter a title for your post: ")
-#   end
-#   filename = "#{posts_dir}/#{Time.now.strftime('%Y-%m-%d')}-#{title.to_url}.#{new_post_ext}"
-#   if File.exist?(filename)
-#     abort("rake aborted!") if ask("#{filename} already exists. Do you want to overwrite?", ['y', 'n']) == 'n'
-#   end
-#   tags = get_stdin("Enter tags to classify your post (comma separated): ")
-#   puts "Creating new post: #{filename}"
-#   open(filename, 'w') do |post|
-#     post.puts "---"
-#     post.puts "layout: post"
-#     post.puts "title: \"#{title.gsub(/&/,'&amp;')}\""
-#     post.puts "modified: #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}"
-#     post.puts "tags: [#{tags}]"
-#     post.puts "image:"
-#     post.puts "  feature: "
-#     post.puts "  credit: "
-#     post.puts "  creditlink: "
-#     post.puts "comments: "
-#     post.puts "share: "
-#     post.puts "---"
-#   end
-# end
-
-# # usage rake new_page
-# desc "Create a new page"
-# task :new_page, :title do |t, args|
-#   if args.title
-#     title = args.title
-#   else
-#     title = get_stdin("Enter a title for your page: ")
-#   end
-#   filename = "#{title.to_url}.#{new_page_ext}"
-#   if File.exist?(filename)
-#     abort("rake aborted!") if ask("#{filename} already exists. Do you want to overwrite?", ['y', 'n']) == 'n'
-#   end
-#   tags = get_stdin("Enter tags to classify your page (comma separated): ")
-#   puts "Creating new page: #{filename}"
-#   open(filename, 'w') do |page|
-#     page.puts "---"
-#     page.puts "layout: page"
-#     page.puts "permalink: /#{title.to_url}/"
-#     page.puts "title: \"#{title}\""
-#     page.puts "modified: #{Time.now.strftime('%Y-%m-%d %H:%M')}"
-#     page.puts "tags: [#{tags}]"
-#     page.puts "image:"
-#     page.puts "  feature: "
-#     page.puts "  credit: "
-#     page.puts "  creditlink: "
-#     page.puts "share: "
-#     page.puts "---"
-#   end
-# end
-
-# def get_stdin(message)
-#   print message
-#   STDIN.gets.chomp
-# end
-
-# def ask(message, valid_options)
-#   if valid_options
-#     answer = get_stdin("#{message} #{valid_options.to_s.gsub(/"/, '').gsub(/, /,'/')} ") while !valid_options.include?(answer)
-#   else
-#     answer = get_stdin(message)
-#   end
-#   answer
-# end
+def ask(message, valid_options)
+  if valid_options
+    answer = get_stdin("#{message} #{valid_options.to_s.gsub(/"/, '').gsub(/, /,'/')} ") while !valid_options.include?(answer)
+  else
+    answer = get_stdin(message)
+  end
+  answer
+end
