--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Adome
 description:      "记录心情的点滴"
 disqus_shortname: 
-reading_time:     true
+reading_time:     false
 words_per_minute: 200
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://aidistan.github.io/blog
