--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:              http://aidistan.github.io/blog
 owner:
   name:           Aidi Stan
   avatar:         avatar.jpg
-  bio:            
+  bio:            "关注有趣的人•物•事"
   email:          aidistan@live.cn
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
