--- a/_config_d.yml
+++ b/_config_d.yml
@@ -2,7 +2,7 @@ title:            Adome
 description:      "记录心情的点滴"
 disqus_shortname: 
 reading_time:     false
-words_per_minute: 200
+words_per_minute: 150
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://0.0.0.0:4000
 
@@ -10,7 +10,7 @@ url:              http://0.0.0.0:4000
 owner:
   name:           Aidi Stan
   avatar:         avatar.jpg
-  bio:            "关注有趣的人•物•事"
+  bio:            "留下学步的脚印"
   email:          aidistan@live.cn
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
