--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ highlighter: pygments
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
+permalink:   pretty
 
 # Amount of post to show on home page
 paginate: 5
