--- a/_config_d.yml
+++ b/_config_d.yml
@@ -2,8 +2,6 @@ title:             Adome
 description:       "记录心情的点滴"
 duoshuo_shortname: adome
 duoshuo_url:       http://adome.aidistan.net
-reading_time:      false
-words_per_minute:  150
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:               http://0.0.0.0:4000
 
@@ -67,5 +65,5 @@ kramdown:
     coderay_bold_every: 10
     coderay_css: class
 
-include: [".htaccess"]
-exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
+include: []
+exclude: ["README.md", "rakefile"]
