--- a/_config_d.yml
+++ b/_config_d.yml
@@ -9,7 +9,7 @@ url:               http://0.0.0.0:4000
 owner:
   name:            Aidi Stan
   avatar:          avatar.jpg
-  bio:             "留下学步的脚印"
+  bio:             Valar Morghulis
   email:           aidistan@live.cn
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
