--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:               http://aidistan.github.io/blog
 owner:
   name:            Aidi Stan
   avatar:          avatar.jpg
-  bio:             "留下学步的脚印"
+  bio:             Valar Morghulis
   email:           aidistan@live.cn
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
