--- a/_config_d.yml
+++ b/_config_d.yml
@@ -3,41 +3,13 @@ description:       "记录心情的点滴"
 duoshuo_shortname: adome
 duoshuo_url:       http://adome.aidistan.net
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:               http://0.0.0.0:4000
+url:               
 
 # Owner/author information
 owner:
   name:            Aidi Stan
   avatar:          avatar.jpg
   bio:             Valar Morghulis
-  email:           aidistan@live.cn
-  # Social networking links used in footer. Update and remove as you like.
-  twitter:        
-  facebook:       
-  github:          aidistan
-  stackexchange:  
-  linkedin:       
-  instagram:      
-  flickr:         
-  tumblr:         
-  # For Google Authorship https://plus.google.com/authorship
-  google_plus:   
-
-# Background image to be tiled on all pages
-background: 
-
-# Analytics and webmaster tools stuff goes here
-google_analytics:   
-google_verify:      
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
-
-# Links to include in top navigation
-# For external links add external: true
-links:
-  - title:    归根
-    url:      http://aidistan.net
-    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
