--- a/_config_d.yml
+++ b/_config_d.yml
@@ -3,7 +3,7 @@ description:       "记录心情的点滴"
 duoshuo_shortname: adome
 duoshuo_url:       http://adome.aidistan.net
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:               
+url:               http://0.0.0.0:4000
 
 # Owner/author information
 owner:
