--- a/rakefile
+++ b/rakefile
@@ -40,7 +40,7 @@ image:
   feature: 
   credit: 
   creditlink: 
-comments: post-#{Time.now.strftime('%Y%m%d')}-0
+comments: post-#{Time.now.strftime('%Y%m%d')}
 share: true
 link: 
 ---
