Use jekyll-sitemap gem
Delete the sitemap.xml and use jekyll-sitemap gem instead. Also I
start to use bundle to handle the dependencies here.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@ highlighter: pygments
 include:     []
 exclude:     ["README.md", "rakefile"]
 
+gems:
+  - jekyll-sitemap
+
 # Paginate
 paginate:    10
 
