--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,10 @@ timezone:    Asia/Shanghai
 markdown:    kramdown
 highlighter: pygments
 include:     []
-exclude:     ["README.md", "rakefile"]
+exclude:     ["README.md", "rakefile", "Gemfile"]
+
+sass:
+  style: :compressed
 
 gems:
   - jekyll-sitemap
