Add Github link

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ owner:
   name:      Aidi Stan
   avatar:    avatar.jpg
   bio:       Valar Morghulis
+  github:    aidistan
 
 collections:
   notes:
