--- a/rakefile
+++ b/rakefile
@@ -27,7 +27,7 @@ namespace :new do
     File.open(filename, 'w').puts <<-END_OF_DOC
 ---
 layout: post
-title: \"#{title.gsub(/&/,'&amp;')}\"
+title: \"#{title}\"
 description: \"\"
 modified: #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
 tags: []
@@ -53,7 +53,7 @@ link:
     File.open(filename, 'w').puts <<-END_OF_DOC
 ---
 layout: post
-title: \"#{title.gsub(/&/,'&amp;')}\"
+title: \"#{title}\"
 description: \"\"
 modified:
 tags: []
@@ -72,17 +72,19 @@ link:
   desc "Create a new note in _notes"
   task :note do
     title = get_stdin("Enter a title for your note: ")
-    filename = "_notes/#{title.to_url}.md"
+    filename = "_notes/#{title.split('/').collect{ |s| s.to_url}.join('/')}.md"
     if File.exist?(filename)
       abort("rake aborted!") unless ask("#{filename} already exists. Do you want to overwrite?", ['y', 'N']) == 'y'
     end
     puts "Creating new post: #{filename}"
+    FileUtils.mkdir_p File.dirname(filename)
     File.open(filename, 'w').puts <<-END_OF_DOC
 ---
-layout:   note
-title:    \"#{title.gsub(/&/,'&amp;')}\"
-date:     #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
-modified: #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
+layout:    note
+permalink: /notes/#{title.split('/').collect{ |s| s.to_url}.join('/')}/
+title:     \"#{title.split('/').last}\"
+date:      #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
+modified:  #{Time.now.strftime('%Y-%m-%d %H:%M:%S %z')}
 mathjax:
 ---
 
