--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,7 @@ timezone:    Asia/Shanghai
 
 # Templating
 title:       Adome
-owner:
-  name:      Aidi Stan
-  avatar:    avatar.jpg
-  bio:       Valar Morghulis
+owner:       Aidi Stan
 paginate:    10
 duoshuo:     adome
 duoshuo_url: http://adome.aidistan.net
