--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ markdown:    kramdown
 highlighter: rouge
 
 # Serving
-baseurl:     http://adome.aidistan.net
+baseurl:     http://blog.aiditan.me
 
 # Outputting
 permalink:   pretty
 timezone:    Asia/Shanghai
 
 # Templating
-title:       Adome
+title:       Aidi's Blog
 owner:       Aidi Stan
 paginate:    10
 duoshuo:     adome
-duoshuo_url: http://adome.aidistan.net
+duoshuo_url: http://adome.aidistan.me
