Fix a bug in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,4 @@ title:       Aidi's Blog
 owner:       Aidi Stan
 paginate:    10
 duoshuo:     adome
-duoshuo_url: http://adome.aidistan.me
+duoshuo_url: http://blog.aiditan.me
