--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ sass:
   style:     :compressed
 gems:
   - jekyll-coffeescript
+  - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
 
@@ -20,6 +21,7 @@ markdown:    kramdown
 highlighter: rouge
 
 # Serving
+url:         http://blog.aiditan.me
 baseurl:     http://blog.aiditan.me
 
 # Outputting
@@ -28,7 +30,7 @@ timezone:    Asia/Shanghai
 
 # Templating
 title:       Aidi's Blog
-owner:       Aidi Stan
+author:      Aidi Stan
 paginate:    10
 duoshuo:     adome
 duoshuo_url: http://blog.aiditan.me
